OpenSLP Change Log
------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

04/18/01 mpeterson@caldera.com
Fixed several socket re-connect, re-usage and aging bugs

04/18/01 mpeterson@caldera.com
Finalized SLPv2 authentication support

04/18/01 mpeterson@caldera.com
Changed registration database debug dump to use new database interface, and
added debug dump of known DA database

04/18/01 mpeterson@caldera.com
Cleaned logging code

04/18/01 mpeterson@caldera.com
Prepared libslp for colation by internal callback interface

04/18/01 mpeterson@caldera.com
Libslp now handles SrvRqsts made with the reserved agent types
"service:directory-agent" and "service:service-agent"

04/18/01 mpeterson@caldera.com
Added checkSourceAddr security feature

04/18/01 mpeterson@caldera.com
Added debug memory allocator

04/18/01 mpeterson@caldera.com
Added support for net.slp.OpenSLPversion property



*** Tag OpenSLP 0.8.3 ***

03/12/01 mpeterson@caldera.com
Fixed sending of a weird 1400 byte datagram when slpd is configured as a DA

03/12/01 rganesan@myrealbox.com
Fixed many documentation bugs and re-worded in some places for clarity based
on excellent and detailed review feedback from Susan G. Kleinmann 
(sgk@debian.org). 

03/05/01 mpeterson@caldera.com
Fixed a very very hard to find problem where regtypes were being cleared by
local re-registration (.reg registration re-registered when we discovered
ourselves as a DA)  Duh!

03/05/01 mpeterson@caldera.com
Fixed problem where multicast was not being use when a DA can not be found
that support all scopes of a given request.

03/02/01 mpeterson@caldera.com
Added --enable-async-api configure option

03/02/01 mpeterson@caldera.com