@@ -67,7 +67,7 @@
 /* common code includes                                                    */
 /*=========================================================================*/
 #include "../common/slp_xmalloc.h"
-#include "../common/slp_xid.c"
+#include "../common/slp_xid.h"
 
 
 /*==========================================================================*/
